--- a/css/custom.css
+++ b/css/custom.css
@@ -17,3 +17,20 @@ body{
 {
     width: inherit;
 }
+#darkModeBtn:active
+{
+
+    transform: translateY(-10px);
+    transition: all 0.1s ease-in-out;
+}
+#lightModeBtn:active
+{
+    transform: translateY(-10px);
+    transition: all 0.1s ease-in-out;
+
+}
+#lightModeAlert,#darkModeAlert
+{
+    top: 1.2rem;
+    right: 25rem;
+}
