--- a/css/custom.css
+++ b/css/custom.css
@@ -1,36 +1,73 @@
-body{
+body {
     font-family: YekanBakh;
 }
+
 @font-face {
     font-family: YekanBakh;
     font-style: normal;
     font-weight: 900;
     src: url('../fonts/YekanBakh-Bold.bbd877a3.woff') format('woff');
 }
+
 @font-face {
     font-family: YekanBakh;
     font-style: normal;
     font-weight: 500;
     src: url('../fonts/YekanBakh-Medium.f7360956.woff') format('woff');
 }
-.w_inherit
-{
+
+.w_inherit {
     width: inherit;
 }
-#darkModeBtn:active
-{
+
+#darkModeBtn:active {
 
     transform: translateY(-10px);
     transition: all 0.1s ease-in-out;
 }
-#lightModeBtn:active
-{
+
+#lightModeBtn:active {
     transform: translateY(-10px);
     transition: all 0.1s ease-in-out;
 
 }
-#lightModeAlert,#darkModeAlert
-{
+
+#lightModeAlert,
+#darkModeAlert {
     top: 1.2rem;
     right: 25rem;
+}
+
+.more_info:hover {
+    .more_info_icon {
+        transform: translatex(-7px);
+        transition: 0.5s all ease-in-out;
+    }
+}
+.card_hover
+{
+    transform: translateY(0px);
+    animation: float 3s ease-in-out infinite;
+}
+@keyframes float{
+    0%{
+        transform: translateY(0px);
+    }
+    50%
+    {
+        transform: translateY(-10px);
+    }
+    100%
+    {
+        transform: translateY(0px);
+    }
+}
+.card_hover:hover::before {
+    background: linear-gradient(to bottom, rgba(4, 14, 39, 0) 0%, rgba(4, 14, 39, 0.7) 100%);
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 126px;
 }
